appId: me.ibrahimsn.app
---
- launchApp
- assertVisible: "Dashboard Fragment"
- tapOn: "Dashboard"
- assertVisible: "Dashboard Fragment"
